# tweetwise

./: .gitignore  LICENSE  README.md  TweetWise - PLAN.md  tweetwise-extension.crx  tweetwise-extension.pem
browser_extension_client/: api_service.js  constants.js  content.js  input-listener-inject.js  input-listener.js  interceptor.js  manifest.json  panel.html  sample_tweet.js  script.js  script_bckup.js  service-worker.js  styles.css  tweet-parser.js
tweetwise-api/: Dockerfile  pyproject.toml  requirements.txt
tweetwise-api/tweetwise_api/: api.py
tweetwise-api/tweetwise_api/ai/: ai_model.py  enums.py  models.py  prompts.py  router.py  service.py
tweetwise-api/tweetwise_api/auth/: service.py  utils.py
tweetwise-api/tweetwise_api/conversation/: service.py
tweetwise-api/tweetwise_api/search/: service.py
tweetwise-api/tweetwise_api/tweet/: enums.py  models.py
tweetwise-extension/: api_service.js  citation-handler.js  command-popup.js  config.js  content.js  manifest.json  script.js  service-worker.js  sidePanel.html  styles.css  tweet-highlighter-old.js  tweet-highlighter.js  tweet-parser.js  twitter-api-interceptor.js
tweetwise-extension/deprecated/: input-listener.js
tweetwise-landing/: index.html
tweetwise-landing/src/: App.tsx
tweetwise-landing/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Header.tsx  HowItWorks.tsx  Installation.tsx  Screenshots.tsx
twitter-ai-bot-api/: pyproject.toml
twitter-ai-bot-api/twitter_ai_bot_api/: api.py
twitter-ai-bot-api/twitter_ai_bot_api/ai/: ai_model.py  models.py  prompts.py  router.py  service.py
